--- a/pom.xml
+++ b/pom.xml
@@ -26,5 +26,24 @@
             <version>3.8.1</version>
         </dependency>
     </dependencies>
-
+     
+         <profiles>
+        <profile>
+            <id>EplioTests</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>3.0.0-M2</version>
+                        <configuration>
+                            <includes>
+    <include>**/*Test*.java</include>
+</includes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
