--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,15 @@
     <groupId>org.example</groupId>
     <artifactId>EplioTest</artifactId>
     <version>1.0-SNAPSHOT</version>
+         
+         <properties>
+                  <java.version>1.8</java.version>
+                   <allure-maven.version>2.9</allure-maven.version>
+                    <aspectj.version>1.8.10</aspectj.version>
+                      <maven-surefire-plugin.version>3.0.0-M2</maven-surefire-plugin.version>
+                         <maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
+         </properties>
+                  
 
     <dependencies>
         <dependency>
@@ -27,23 +36,72 @@
         </dependency>
     </dependencies>
      
-         <profiles>
+        <build>
+    <resources>
+        <resource>
+            <directory>src/main/resources</directory>
+            <filtering>true</filtering>
+        </resource>
+    </resources>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>${maven-compiler-plugin.version}</version>
+            <configuration>
+                <source>${java.version}</source>
+                <target>${java.version}</target>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>${maven-surefire-plugin.version}</version>
+            <configuration>
+                <includes>
+                    <include>**/*Test*.java</include>
+                </includes>
+                <testFailureIgnore>false</testFailureIgnore>
+                <argLine>
+                    -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                </argLine>
+                <systemProperties>
+                    <property>
+                        <name>allure.results.directory</name>
+                        <value>${basedir}/target/allure-results</value>
+                    </property>
+                </systemProperties>
+            </configuration>
+            <dependencies>
+                <dependency>
+                    <groupId>org.aspectj</groupId>
+                    <artifactId>aspectjweaver</artifactId>
+                    <version>${aspectj.version}</version>
+                </dependency>
+            </dependencies>
+        </plugin>
+        <plugin>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-maven</artifactId>
+            <version>${allure-maven.version}</version>
+            <configuration>
+                <reportVersion>2.6.0</reportVersion>
+            </configuration>
+        </plugin>
+    </plugins>
+                 
+                 <profiles>
         <profile>
             <id>EplioTests</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>3.0.0-M2</version>
-                        <configuration>
-                            <includes>
-    <include>**/*Test*.java</include>
-</includes>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+                <property>
+                    <name>env</name>
+                    <value>qa</value>
+                </property>
+            </activation>
         </profile>
     </profiles>
+</build>
+
 </project>
